--- a/package.json
+++ b/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "georem-location-reminder",
+  "name": "LocationReminderApp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "description": "A location-based reminder application",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "test": "jest"
   },
   "dependencies": {
-    "expo": "~49.0.15",
     "react": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-paper": "^5.10.6",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-maps": "1.7.1",
-    "react-native-google-places-autocomplete": "^2.5.6",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "react-native-background-geolocation": "^4.15.3",
-    "expo-notifications": "~0.20.1",
-    "expo-location": "~16.1.0",
-    "expo-permissions": "~14.2.1",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-haptics": "~12.4.0",
-    "expo-constants": "~14.4.2",
-    "expo-status-bar": "~1.6.0"
+    "react-native": "0.72.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.76.5"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
